# flower-power

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  README.md  build  flower-power.cbp
data/: onlineSales.csv  producers.csv  sellers.csv
data/notes/: deliveryNoteFile1.1-0.txt  deliveryNoteFile1.1-1.txt  deliveryNoteFile1.1-2.txt  deliveryNoteFile1.1-3.txt  deliveryNoteFile1.1-4.txt
src/: MainMenu.cpp  MainMenu.h  main.cpp
src/core/: DistributionCenter.cpp  DistributionCenter.h  System.cpp  System.h
src/core/config/: Config.cpp  Config.h  Paths.h
src/core/config/data/: BouquetRequest.cpp  BouquetRequest.h  ClassifierBox.cpp  ClassifierBox.h  DTOs.h  Flower.cpp  Flower.h  FlowerBox.cpp  FlowerBox.h  ProducerFlowers.cpp  ProducerFlowers.h  Seller.cpp  Seller.h  SellerRequest.cpp  SellerRequest.h
src/core/job/: Job.cpp  Job.h
src/core/job/classifier/: ClassifierJob.cpp  ClassifierJob.h
src/core/job/distributor/: DistributorJob.cpp  DistributorJob.h
src/core/job/producer/: ProducerJob.cpp  ProducerJob.h
src/core/job/seller/: SellerJob.cpp  SellerJob.h
src/core/producer/: ProducerJob.cpp  ProducerJob.h
src/core/scheduler/: Scheduler.cpp  Scheduler.h
src/core/seller/: SellerJob.cpp  SellerJob.h
src/menu/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  SettingsMenu.cpp  SettingsMenu.h  StatsMenu.cpp  StatsMenu.h
src/simulator/: ClientSimulator.cpp  ClientSimulator.h
src/utils/: CSVReader.h  Closer.h  ContextStatus.cpp  ContextStatus.h  ContextStorage.cpp  ContextStorage.h  Definitions.h  Logger.cpp  Logger.h  Pipe.cpp  Pipe.h  ProcessKiller.cpp  ProcessKiller.h  StatsCenter.cpp  StatsCenter.h  StringUtils.cpp  StringUtils.h
src/utils/csv/: CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h
src/utils/signals/: EventHandler.h  SignalHandler.cpp  SignalHandler.h  StopHandler.cpp  StopHandler.h
tests/: ClientSimulatorTests.cpp  DistributionCenterTests.cpp  SellerTests.cpp  test1.cpp
tmp/: state.csv
